# claimcoin-autoclaim

./: .gitignore  CHANGELOG.md  CHANGE_NOTES.md  README.md  ROADMAP.md  accounts.example.yaml  proxies.example.txt  pyproject.toml
docs/: PROTOCOL.md  SOLVER_STRATEGY.md  SURFACE_MAP.md
ops/: HELPER_REQUIREMENTS.md
ops/systemd/: claimcoin-antibot.service  claimcoin-flaresolverr.service  claimcoin-runloop.service
scripts/: claimcoin_dashboard.py  start-claimcoin-screen.sh
src/claimcoin_autoclaim/: account_store.py  cli.py  config.py  http.py  iconcaptcha_solver.py  logging_config.py  models.py  proxy_pool.py  runner.py  session_state.py
src/claimcoin_autoclaim/clients/: __init__.py  auth_client.py  captcha_client.py  cloudflare_client.py  faucet_client.py  http_client.py  links_client.py
src/claimcoin_autoclaim/parsers/: __init__.py  auth.py  dashboard.py  faucet.py  links.py  withdraw.py
src/claimcoin_autoclaim/services/: __init__.py  account_runner.py  claim_service.py  multi_runner.py  notification_service.py  scheduler.py
src/claimcoin_autoclaim/state/: store.py
src/claimcoin_autoclaim/utils/: __init__.py  headers.py  proxies.py  timing.py
tests/: test_account_runner.py  test_captcha_client.py  test_claim_submit_fallback.py  test_cloudflare_detection.py  test_cloudflare_requests_bridge.py  test_http_client.py  test_iconcaptcha_solver.py  test_notification_service.py  test_scheduler.py  test_state_store.py  test_withdraw_parser.py
